
[gd_scene load_steps=31 format=3 uid="uid://b578ypgokpnpl"]

[ext_resource type="Texture2D" uid="uid://gs1ionxlidws" path="res://textures/entity/enemy/turret_normal.png" id="1_ayhvj"]
[ext_resource type="Script" path="res://scripts/entities/enemy/enemy_turret.gd" id="1_fa6vt"]
[ext_resource type="PackedScene" uid="uid://b3mk2eldqln48" path="res://scenes/entities/components/health_component.tscn" id="2_kwr5c"]
[ext_resource type="Texture2D" uid="uid://mleldnpwtv13" path="res://textures/entity/shadow_small.png" id="2_p64mv"]
[ext_resource type="AudioStream" uid="uid://bcmdu5fpnfxia" path="res://audio/assets/entities/enemy/enemy_turret/fire/Enemy_Turret_Fire_00.wav" id="2_wx7sh"]
[ext_resource type="Material" uid="uid://jujnu1xxj7fl" path="res://shaders/hit_flash_mat.tres" id="3_ast5u"]
[ext_resource type="AudioStream" uid="uid://8euxmxn88qh8" path="res://audio/assets/entities/enemy/enemy_turret/fire/Enemy_Turret_Fire_01.wav" id="3_r21ql"]
[ext_resource type="PackedScene" uid="uid://cpcnnngsn42fw" path="res://scenes/entities/components/hitbox_component.tscn" id="4_4kmcw"]
[ext_resource type="AudioStream" uid="uid://2glcddcpllx4" path="res://audio/assets/entities/enemy/enemy_turret/fire/Enemy_Turret_Fire_02.wav" id="4_sqev6"]
[ext_resource type="AudioStream" uid="uid://djboyt01st5xe" path="res://audio/assets/entities/enemy/enemy_turret/fire/Enemy_Turret_Fire_03.wav" id="5_uqx3b"]
[ext_resource type="AudioStream" uid="uid://ebpypviedx" path="res://audio/assets/entities/enemy/enemy_turret/damaged/Enemy_Turret_Damaged_00.wav" id="9_rvpqh"]
[ext_resource type="AudioStream" uid="uid://tgjcgeykdgs5" path="res://audio/assets/entities/enemy/enemy_turret/damaged/Enemy_Turret_Damaged_01.wav" id="10_rnaas"]
[ext_resource type="AudioStream" uid="uid://fwufxdgy1n36" path="res://audio/assets/entities/enemy/enemy_turret/damaged/Enemy_Turret_Damaged_02.wav" id="11_mes1h"]
[ext_resource type="AudioStream" uid="uid://bsv0e6vx58f0x" path="res://audio/assets/entities/enemy/enemy_turret/damaged/Enemy_Turret_Damaged_03.wav" id="12_m2vap"]
[ext_resource type="Texture2D" uid="uid://dr2sn1wv48j71" path="res://textures/entity/enemy/enemy_gun_small.png" id="13_3cicr"]
[ext_resource type="AudioStream" uid="uid://cm3dliofvtunq" path="res://audio/assets/entities/enemy/enemy_turret/spotted/Enemy_Turret_Spotted_00.wav" id="13_jqg8i"]
[ext_resource type="AudioStream" uid="uid://skar8xcv0tas" path="res://audio/assets/entities/enemy/enemy_turret/death/Enemy_Turret_Death_00.wav" id="14_okx0m"]
[ext_resource type="AudioStream" uid="uid://b2i5gb8iwnsjt" path="res://audio/assets/entities/enemy/enemy_turret/death/Enemy_Turret_Death_01.wav" id="15_m5bxh"]
[ext_resource type="AudioStream" uid="uid://dc5hvjo1laiay" path="res://audio/assets/entities/enemy/enemy_turret/death/Enemy_Turret_Death_02.wav" id="16_nkqvf"]
[ext_resource type="AudioStream" uid="uid://bs1do45hgrhun" path="res://audio/assets/entities/enemy/enemy_turret/death/Enemy_Turret_Death_03.wav" id="17_7ghnk"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_h55pn"]
random_pitch = 1.25
random_volume_offset_db = 0.25
streams_count = 4
stream_0/stream = ExtResource("2_wx7sh")
stream_0/weight = 1.0
stream_1/stream = ExtResource("3_r21ql")
stream_1/weight = 1.0
stream_2/stream = ExtResource("4_sqev6")
stream_2/weight = 1.0
stream_3/stream = ExtResource("5_uqx3b")
stream_3/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_d2was"]
random_pitch = 1.5
random_volume_offset_db = 0.25
streams_count = 1
stream_0/stream = ExtResource("13_jqg8i")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_qoqxv"]
random_pitch = 1.5
random_volume_offset_db = 0.2
streams_count = 4
stream_0/stream = ExtResource("9_rvpqh")
stream_0/weight = 1.0
stream_1/stream = ExtResource("10_rnaas")
stream_1/weight = 1.0
stream_2/stream = ExtResource("11_mes1h")
stream_2/weight = 1.0
stream_3/stream = ExtResource("12_m2vap")
stream_3/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_vpk0c"]
random_pitch = 1.6
random_volume_offset_db = 0.2
streams_count = 4
stream_0/stream = ExtResource("14_okx0m")
stream_0/weight = 1.0
stream_1/stream = ExtResource("15_m5bxh")
stream_1/weight = 1.0
stream_2/stream = ExtResource("16_nkqvf")
stream_2/weight = 1.0
stream_3/stream = ExtResource("17_7ghnk")
stream_3/weight = 1.0

[sub_resource type="Animation" id="Animation_nx33y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("graphic:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("arm_left:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-4, 5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("arm_right:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4, 5)]
}

[sub_resource type="Animation" id="Animation_s8n4m"]
resource_name = "death"
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("graphic:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [12, 13, 14, 15, 16]
}

[sub_resource type="Animation" id="Animation_0ptb0"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("graphic:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_6ke53"]
resource_name = "wake"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("graphic:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [2, 3, 4, 5, 6, 7]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.05),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_wake_sound"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("arm_left:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-4, 6), Vector2(-5, 6), Vector2(-5, 6), Vector2(-5, -9.53674e-07)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("arm_right:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.05, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(4, 6), Vector2(5, 6), Vector2(5, 6), Vector2(5, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hc3hu"]
_data = {
"RESET": SubResource("Animation_nx33y"),
"death": SubResource("Animation_s8n4m"),
"idle": SubResource("Animation_0ptb0"),
"wake": SubResource("Animation_6ke53")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7iy0a"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_815qu"]
size = Vector2(12, 11)

[node name="enemy_turret_normal" type="CharacterBody2D" node_paths=PackedStringArray("player_detection", "health_component")]
z_index = -1
material = ExtResource("3_ast5u")
collision_layer = 128
collision_mask = 3
script = ExtResource("1_fa6vt")
player_detection = NodePath("player_detection")
detection_distance = 220.0
shot_delay_time = 0.2
shot_cooldown_time = 2.5
attack_sound = SubResource("AudioStreamRandomizer_h55pn")
spotted_sound = SubResource("AudioStreamRandomizer_d2was")
damaged_sound = SubResource("AudioStreamRandomizer_qoqxv")
death_sound = SubResource("AudioStreamRandomizer_vpk0c")
enemy_name = "Turret"
health_component = NodePath("health_component")

[node name="arm_left" type="Node2D" parent="."]
z_index = 1
use_parent_material = true
position = Vector2(-4, 5)
rotation = -1.5708

[node name="gun_left" type="Sprite2D" parent="arm_left"]
use_parent_material = true
texture = ExtResource("13_3cicr")

[node name="arm_right" type="Node2D" parent="."]
z_index = -1
use_parent_material = true
position = Vector2(4, 5)
rotation = -1.5708

[node name="Sprite2D" type="Sprite2D" parent="arm_right"]
use_parent_material = true
texture = ExtResource("13_3cicr")

[node name="shadow" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.243137)
z_index = -1
position = Vector2(0, 4)
texture = ExtResource("2_p64mv")

[node name="graphic" type="Sprite2D" parent="."]
use_parent_material = true
texture = ExtResource("1_ayhvj")
hframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hc3hu")
}
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_7iy0a")
debug_color = Color(0, 0.6, 0.701961, 0.188235)

[node name="player_detection" type="RayCast2D" parent="."]
target_position = Vector2(0, 0)
collision_mask = 3

[node name="health_component" parent="." node_paths=PackedStringArray("hitbox_component") instance=ExtResource("2_kwr5c")]
hitbox_component = NodePath("../hitbox_component")
max_health = 4

[node name="hitbox_component" parent="." instance=ExtResource("4_4kmcw")]
visible = false
collision_layer = 128
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox_component"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_815qu")
debug_color = Color(0.968627, 0, 0.47451, 0.0470588)

[node name="hit_shader_cooldown" type="Timer" parent="."]
wait_time = 0.1

[connection signal="damage_taken" from="health_component" to="." method="_on_health_component_damage_taken"]
[connection signal="dead" from="health_component" to="." method="_on_health_component_dead"]
[connection signal="timeout" from="hit_shader_cooldown" to="." method="_on_hit_shader_cooldown_timeout"]
